fix copy spacings

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -7,7 +7,7 @@
 .meta {
   padding: 2em;
   @media (--md) {
-    padding: 1rem;
+    padding: 2rem;
   }
 }
 .box {
